force-app/main/default/objects/Travel_Activity__c/Travel_Activity__c.object-meta.xml
<CustomObject>
    <label>Travel Activity</label>
    <nameField>
        <label>TravelActivity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Travel Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>