force-app/main/default/objects/Travel_Activity__c/fields/Accessibility__c.field-meta.xml
<CustomField>
    <fullName>Accessibility__c</fullName>
    <label>Accessibility (wheelchair)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>