force-app/main/default/objects/Travel_Activity__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <label>Duration</label>
    <length>18</length>
    <type>Text</type>
</CustomField>