force-app/main/default/objects/Travel_Activity__c/fields/Good_For__c.field-meta.xml
<CustomField>
    <fullName>Good_For__c</fullName>
    <label>Good For</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Families</fullName>
            </value>
            <value>
                <fullName>Couples</fullName>
            </value>
            <value>
                <fullName>Solo</fullName>
            </value>
            <value>
                <fullName>Groups</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>