force-app/main/default/objects/Travel_Activity__c/fields/Is_AI_Enhanced__c.field-meta.xml
<CustomField>
    <fullName>Is_AI_Enhanced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is AI Enhanced</label>
    <type>Checkbox</type>
</CustomField>