force-app/main/default/objects/Travel_Activity__c/fields/Is_Geo_Tagged__c.field-meta.xml
<CustomField>
    <fullName>Is_Geo_Tagged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Geo Tagged</label>
    <type>Checkbox</type>
</CustomField>