force-app/main/default/objects/Travel_Activity__c/fields/Listing_Summary__c.field-meta.xml
<CustomField>
    <fullName>Listing_Summary__c</fullName>
    <description>2–3 sentence customer-facing blurb</description>
    <label>Listing Summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>