force-app/main/default/objects/Travel_Activity__c/fields/SupplierNotes__c.field-meta.xml
<CustomField>
    <fullName>SupplierNotes__c</fullName>
    <description>raw, messy notes from the supplier</description>
    <label>Supplier Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>