force-app/main/default/objects/Travel_Activity__c/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <label>Zip / Postal</label>
    <length>18</length>
    <type>Text</type>
</CustomField>