force-app/main/default/objects/Travel_Activity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Supplier__c</columns>
    <columns>Is_Geo_Tagged__c</columns>
    <columns>Is_AI_Enhanced__c</columns>
    <columns>Good_For__c</columns>
    <columns>Languages__c</columns>
    <columns>Listing_Summary__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>